manifest/objects/ALTF__Account_Plan_Type_Question__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account_Plan_Type__c</fullName>
        <label>Account Plan Type</label>
        <referenceTo>ALTF__Account_Plan_Type__c</referenceTo>
        <relationshipLabel>Altify Account Plan Type Questions</relationshipLabel>
        <relationshipName>Altify_Account_Plan_Type_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Question</label>
        <referenceTo>ALTF__Account_Question__c</referenceTo>
        <relationshipLabel>Altify Account Questions</relationshipLabel>
        <relationshipName>Account_Questions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Section_Heading__c</fullName>
        <label>Section Heading</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Section 1</fullName>
                </value>
                <value>
                    <fullName>Section 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Altify Account Plan Type Question</label>
    <nameField>
        <label>Plan Type Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Account Plan Type Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>